Display addresses as their flag names. (closes #5)

--- a/sonare/block.html
+++ b/sonare/block.html
@@ -22,7 +22,7 @@
         .ptr_size           { color: #B5D3DD; font-style: italic; }
         .addr, .num                { color: #7FEC91; }
 
-        .label              { color: #D8D8D8; font-weight: bold; }
+        .label, .ref        { color: #D8D8D8; font-weight: bold; }
         .hex, .op           { color: #D8D8D8; }
         .mnem               { color: #ECDE17; }
         .reg                { color: #E96976; }
