--- a/sonare/graph.html
+++ b/sonare/graph.html
@@ -32,13 +32,25 @@ div.label:hover     { background: #404054; }
 tr:hover            { background: #404054;
                       border-top: 1px solid #222240;
                       border-bottom: 1px solid #222240; }
+
+g.edge         .edgePath  { stroke-width: 2px; fill: none; }
+g.edge.reverse .edgePath  { stroke-width: 3px; }
+/* set colors according to edge types */
+g.edge         .edgePath  { stroke: #777777; }  /* default */
+g.edge.ok      .edgePath  { stroke: #00ff00; }
+g.edge.fail    .edgePath  { stroke: #ff0000; }
+
+g.edge         .edgeArrow { stroke: #141414; stroke-width: 1px; }
+/* set colors according to edge types */
+g.edge         .edgeArrow { fill: #777777; }    /* default */
+g.edge.ok      .edgeArrow { fill: #00ff00; }
+g.edge.fail    .edgeArrow { fill: #ff0000; }
     </style>
 </head>
 <body>
     % for blkElemID, b in blocks:
-    <!-- TODO: use ems for width -->
     <div id="${blkElemID}" class="block"
-            style="display: table; position: absolute;">
+            style="display: table; position: absolute; z-index: -1;">
         <div class="label">${b.labelName}:</div>
         <table>
             % for (addr, asmOp) in b.asmOps:
@@ -52,5 +64,24 @@ tr:hover            { background: #404054;
         </div>
     </div>
     % endfor
+
+    <!-- width and height are specified after edge paths are filled in -->
+    <svg id="edges" version="1.1"
+            style="position:absolute; top:0; left:0; z-index:0;">
+        <defs>
+            <g id="arrow">
+                <!-- a downwards arrow, with the origin at its tip
+                    (edges always end with a small downwards arrow) -->
+                <path d="M -4.5 -10  L 4.5 -10  L 0 0  Z" />
+            </g>
+        </defs>
+
+        % for edgeElemID, edgeType in edges:
+        <g id="${edgeElemID}" class="edge ${edgeType}">
+            <path class="edgePath" />
+            <use class="edgeArrow" xlink:href="#arrow" />
+        </g>
+        % endfor
+    </svg>
 </body>
 </html>
