graph.html: increment space between lines

--- a/sonare/graph.html
+++ b/sonare/graph.html
@@ -16,6 +16,7 @@ div.label           { margin-left: -2px; }
 
 table               { border-collapse: collapse; border-spacing: 0px; }
 table, tr, td       { margin: 0; padding: 0; white-space: nowrap; }
+td                  { padding-top: 3px; }
 td:not(:last-child) { padding-right: 15px; }
 
 /*.addr               { color: #B673E5; }*/
